# egui_table

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  clippy.toml  demo-178799691d877346.js  demo-178799691d877346_bg.wasm  demo-5227ca35f00f500a.js  demo-5227ca35f00f500a_bg.wasm  demo-711af628e98833f7.js  demo-711af628e98833f7_bg.wasm  demo-75bf4e99459ee9a1.js  demo-75bf4e99459ee9a1_bg.wasm  demo-7bb64a4fdead56d.js  demo-7bb64a4fdead56d_bg.wasm  demo-7c1d7dd05ec5eb4c.js  demo-7c1d7dd05ec5eb4c_bg.wasm  demo-99f63c0eb3e43472.js  demo-99f63c0eb3e43472_bg.wasm  demo-ac240499329eb4c1_bg.wasm  demo-b0ad74bd911d8abf.js  demo-b0ad74bd911d8abf_bg.wasm  demo-ca6e421bb3bb9081.js  demo-ca6e421bb3bb9081_bg.wasm  deny.toml  index.html  lychee.toml  manifest.json  rust-toolchain  sw.js
.github/workflows/: pages.yml  rust.yml  typos.yml
demo/: Cargo.toml
demo/src/: app.rs  lib.rs  main.rs  plot_demo.rs  split_scroll_demo.rs  table_demo.rs
demo/tests/: e2e.rs
egui_table/: Cargo.toml
egui_table/src/: columns.rs  lib.rs  split_scroll.rs  table.rs
scripts/: generate_changelog.py  template_update.py
scripts/clippy_wasm/: clippy.toml
src/: main.rs
