[package]
authors = [
    "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>", # https://github.com/emilk
    "rerun.io <opensource@rerun.io>",
]
categories = ["gui"]
description = "Table viewer for egui"
edition.workspace = true
homepage = "https://github.com/rerun-io/egui_table"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = ["table", "egui", "gui", "dataframe"]
license.workspace = true
name = "egui_table"
publish = true
readme = "../README.md"
repository = "https://github.com/rerun-io/egui_table"
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []


[dependencies]
egui = { workspace = true, default-features = false, features = ["serde"] }
serde.workspace = true
vec1.workspace = true
